<resources>
    <string name="app_name">GoogleIOClock</string>
    <string name="path_data_0">M 66.0,130.0 C 101.227,129.927,129.906,101.221,130.0,66.0 L 130.0,66.0 C 129.915,30.778,101.223,2.084,66.0,2.0 C 30.829,2.143,2.085,30.815,2.0,66.0 L 2.0,66.0 L 2.0,66.0 C 2.106,101.182,30.821,129.882,66.0,130.0 L 66.0,130.0z </string>
    <string name="path_data_1">M 50.0,2.0 C 50.0,2.0,50.0,2.0,50.0,2.0 L 80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 L 80.813,130.0 L 50.0,130.0 C 50.0,130.0,50.0,130.0,50.0,130.0 L 50.0,2.0 z</string>
    <string name="path_data_1_">M 50.0,2.0 L 50.0,2.0 C 50.0,2.0,50.0,2.0,50.0,2.0 C 50.0,2.0,50.0,2.0,50.0,2.0 L 80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 C 80.813,2.0,80.813,2.0,80.813,2.0 L 80.813,130.0 C 80.813,130.0,80.813,130.0,80.813,130.0 C 80.813,130.0,80.813,130.0,80.813,130.0 C 80.813,130.0,80.813,130.0,80.813,130.0 L 50.0,130.0 C 50.0,130.0,50.0,130.0,50.0,130.0 C 50.0,130.0,50.0,130.0,50.0,130.0 C 50.0,130.0,50.0,130.0,50.0,130.0 L 50.0,130.0 L 50.0,87.33333 L 50.0,44.666664 L 50.0,2.0 z</string>
    <string name="path_data_2_">M 108.405,130.00024 L 41.001,130.00024 C 41.001,130.00024,50.923,121.62325,56.738,116.75025 C 63.061,111.45125,70.487,105.29925,88.19,87.50725 L 88.19,87.50725 C 92.017,83.66125,95.074,80.26325,97.519,77.17325 C 106.07,66.21525,107.203,58.71025,107.492,49.14825 C 107.884,36.20525,94.156,19.14325,70.997,20.80925 C 47.838,22.47525,41.001,44.13025,41.001,44.13025 C 41.001,44.13025,41.001,44.13025,41.001,44.13025 L 23.0,25.43525 C 23.0,25.43525,29.837,3.7792497,52.996,2.1132495 C 76.155,0.44724956,89.884,17.509249,89.492,30.453249 C 89.117,42.80925,87.892,51.02025,70.189,68.81225 L 70.189,68.81225 C 67.6,71.41425,65.215,73.77825,63.007,75.93525 C 50.439,88.18725,43.254,94.12325,37.925,98.58825 C 32.109,103.46125,23.0,111.30525,23.0,111.30525 L 91.071,111.30525 L 108.405,130.00024 L 108.405,130.00024 L 108.405,130.00024 z</string>
    <string name="path_data_2">M 108.405,130.00024 L 41.001,130.00024 C 41.001,130.00024,41.001,130.00024,41.001,130.00024 C 41.001,130.00024,50.923,121.62325,56.738,116.75025 C 63.061,111.45125,70.487,105.29925,88.19,87.50725 L 88.19,87.50725 C 88.19,87.50725,88.19,87.50725,88.19,87.50725 C 92.017,83.66125,95.074,80.26325,97.519,77.17325 C 106.07,66.21525,107.203,58.71025,107.492,49.14825 C 107.884,36.20525,94.156,19.14325,70.997,20.80925 C 47.838,22.47525,41.001,44.13025,41.001,44.13025 C 41.001,44.13025,41.001,44.13025,41.001,44.13025 L 23.0,25.43525 C 23.0,25.43525,29.837,3.7792497,52.996,2.1132495 C 76.155,0.44724956,89.884,17.509249,89.492,30.453249 C 89.117,42.80925,87.892,51.02025,70.189,68.81225 L 70.189,68.81225 C 70.189,68.81225,70.189,68.81225,70.189,68.81225 C 67.6,71.41425,65.215,73.77825,63.007,75.93525 C 50.439,88.18725,43.254,94.12325,37.925,98.58825 C 32.109,103.46125,23.0,111.30525,23.0,111.30525 L 91.071,111.30525 L 108.405,130.00024 C 108.405,130.00024,108.405,130.00024,108.405,130.00024 C 108.405,130.00024,108.405,130.00024,108.405,130.00024 L 108.405,130.00024 z</string>
    <string name="path_data_3">M 39.564,103.81384 L 39.564,103.81384 C 39.564,103.81384,42.569,113.48084,50.837,121.52184 C 59.785,130.22385,78.949,133.53284,92.833,125.14784 C 106.053,117.16284,111.102,100.37084,107.965,89.24884 L 107.965,89.24884 C 103.759,74.33584,91.315,72.00284,91.315,72.00284 C 91.315,72.00284,92.96,70.88384,94.142,69.99884 C 98.03,66.85784,104.552,60.03884,104.552,49.63284 C 104.552,34.806843,93.604,27.072842,89.304,24.48184 C 85.004,21.89084,76.109,18.566841,62.175,22.27984 C 48.243,25.99184,41.695,42.32284,41.695,42.32284 L 24.13,23.77984 C 24.13,23.77984,29.895,8.182841,44.611,3.736841 C 58.414,-0.434159,68.298,3.887841,72.598,6.478841 C 76.898,9.069841,87.352,17.082842,87.444,31.89084 L 87.444,31.89084 C 87.537,46.71584,73.75,53.459843,73.75,53.459843 C 73.75,53.459843,78.273,56.147842,82.682,60.313843 C 86.38,64.10084,90.965,70.15484,90.965,75.16284 C 90.965,86.63484,87.699,98.23484,75.225,106.45984 L 75.225,106.45984 L 75.225,106.45984 C 61.977,115.19684,41.427,111.13484,33.272,102.97884 C 25.117,94.82384,22.0,85.27084,22.0,85.27084 L 39.564,103.81384 z</string>
    <string name="path_data_3_">M 39.564,103.81384 L 39.564,103.81384 C 39.564,103.81384,42.569,113.48084,50.837,121.52184 C 59.785,130.22385,78.949,133.53284,92.833,125.14784 C 106.053,117.16284,111.102,100.37084,107.965,89.24884 L 107.965,89.24884 L 107.965,89.24884 C 103.759,74.33584,91.315,72.00284,91.315,72.00284 C 91.315,72.00284,92.96,70.88384,94.142,69.99884 C 98.03,66.85784,104.552,60.03884,104.552,49.63284 L 104.552,49.63284 L 104.552,49.63284 C 104.552,34.806843,93.604,27.072842,89.304,24.48184 C 85.004,21.89084,76.109,18.566841,62.175,22.27984 C 48.243,25.99184,41.695,42.32284,41.695,42.32284 L 41.695,42.32284 L 41.695,42.32284 L 24.13,23.77984 C 24.13,23.77984,29.895,8.182841,44.611,3.736841 C 58.414,-0.434159,68.298,3.887841,72.598,6.478841 L 72.598,6.478841 C 76.898,9.069841,87.352,17.082842,87.444,31.89084 L 87.444,31.89084 C 87.537,46.71584,73.75,53.459843,73.75,53.459843 L 73.75,53.459843 C 73.75,53.459843,78.273,56.147842,82.682,60.313843 C 86.38,64.10084,90.965,70.15484,90.965,75.16284 C 90.965,86.63484,87.699,98.23484,75.225,106.45984 L 75.225,106.45984 L 75.225,106.45984 C 61.977,115.19684,41.427,111.13484,33.272,102.97884 C 25.117,94.82384,22.0,85.27084,22.0,85.27084 L 39.564,103.81384 z</string>
    <string name="path_data_4_">M 115.548,107.092 L 35.208,107.092 C 35.208,107.092,35.208,107.092,35.208,107.092 C 35.208,107.092,35.208,107.092,35.208,107.092 C 35.208,107.092,35.208,107.092,35.208,107.092 L 35.208,95.956 L 85.64,21.185 C 85.64,21.185,85.64,21.185,85.64,21.185 C 85.64,21.185,85.64,21.185,85.64,21.185 C 85.64,21.185,85.64,21.185,85.64,21.185 L 101.548,21.185 L 101.548,130.0 C 101.548,130.0,101.548,130.0,101.548,130.0 C 101.548,130.0,101.548,130.0,101.548,130.0 C 101.548,130.0,101.548,130.0,101.548,130.0 L 83.34,110.816 L 83.34,2.0 L 67.431,2.0 C 67.431,2.0,67.431,2.0,67.431,2.0 C 67.431,2.0,67.431,2.0,67.431,2.0 L 17.0,76.772 C 17.0,76.772,17.0,76.772,17.0,76.772 L 17.0,87.908 C 17.0,87.908,17.0,87.908,17.0,87.908 L 59.192,87.908 C 59.192,87.908,59.192,87.908,59.192,87.908 C 59.192,87.908,59.192,87.908,59.192,87.908 C 59.192,87.908,59.192,87.908,59.192,87.908 L 97.339,87.908 L 115.548,107.092 C 115.548,107.092,115.548,107.092,115.548,107.092 C 115.548,107.092,115.548,107.092,115.548,107.092 L 115.548,107.092 z</string>
    <string name="path_data_4">M 115.548,107.092 L 35.208,107.092 C 35.208,107.092,35.208,107.092,35.208,107.092 C 35.208,107.092,35.208,107.092,35.208,107.092 C 35.208,107.092,35.208,107.092,35.208,107.092 L 35.208,95.956 L 85.64,21.185 C 85.64,21.185,85.64,21.185,85.64,21.185 C 85.64,21.185,85.64,21.185,85.64,21.185 C 85.64,21.185,85.64,21.185,85.64,21.185 L 101.548,21.185 L 101.548,130.0 C 101.548,130.0,101.548,130.0,101.548,130.0 C 101.548,130.0,101.548,130.0,101.548,130.0 L 101.548,130.0 L 101.548,130.0 L 83.34,110.816 L 83.34,2.0 L 67.431,2.0 C 67.431,2.0,67.431,2.0,67.431,2.0 L 17.0,76.772 C 17.0,76.772,17.0,76.772,17.0,76.772 C 17.0,76.772,17.0,76.772,17.0,76.772 L 17.0,87.908 C 17.0,87.908,17.0,87.908,17.0,87.908 L 59.192,87.908 C 59.192,87.908,59.192,87.908,59.192,87.908 C 59.192,87.908,59.192,87.908,59.192,87.908 C 59.192,87.908,59.192,87.908,59.192,87.908 L 97.339,87.908 L 115.548,107.092 C 115.548,107.092,115.548,107.092,115.548,107.092 L 115.548,107.092 z</string>
    <string name="path_data_5">M 20.0,82.333 L 37.854,101.143 C 37.854,101.143,37.854,101.143,37.854,101.143 C 37.854,101.143,41.693,111.223,42.561,112.722 C 43.428,114.22,53.155,130.0,73.887,130.0 L 73.887,130.0 L 73.887,130.0 C 94.617,130.0,110.699,113.738,110.699,94.124 C 110.699,74.51,93.911,58.874,75.297,58.874 C 74.484,58.874,71.726,59.104,70.926,59.163 L 70.926,59.163 L 70.926,59.163 C 54.333,61.326,41.285,74.937,41.285,74.937 C 41.285,74.937,41.285,74.937,41.285,74.937 L 48.148,20.811 L 104.147,20.811 L 104.147,20.811 L 86.294,2.0 L 30.295,2.0 C 30.295,2.0,30.295,2.0,30.295,2.0 L 23.433,56.127 C 23.433,56.127,37.634,42.727,53.865,40.258 C 55.042,40.132,56.236,40.064,57.443,40.064 L 57.443,40.064 C 76.058,40.064,92.846,55.7,92.846,75.314 L 92.846,75.314 C 92.846,94.927,76.764,111.19,56.033,111.19 C 35.303,111.19,25.574,95.41,24.707,93.911 C 23.84,92.413,20.0,82.333,20.0,82.333 L 20.0,82.333 L 20.0,82.333 C 20.0,82.333,20.0,82.333,20.0,82.333 L 20.0,82.333 z</string>
    <string name="path_data_5_">M 20.0,82.333 L 37.854,101.143 C 37.854,101.143,37.854,101.143,37.854,101.143 C 37.854,101.143,41.693,111.223,42.561,112.722 C 43.428,114.22,53.155,130.0,73.887,130.0 L 73.887,130.0 C 73.887,130.0,73.887,130.0,73.887,130.0 L 73.887,130.0 C 94.617,130.0,110.699,113.738,110.699,94.124 C 110.699,74.51,93.911,58.874,75.297,58.874 C 74.484,58.874,71.726,59.104,70.926,59.163 L 70.926,59.163 C 70.926,59.163,70.926,59.163,70.926,59.163 C 54.333,61.326,41.285,74.937,41.285,74.937 C 41.285,74.937,41.285,74.937,41.285,74.937 L 48.148,20.811 L 104.147,20.811 L 104.147,20.811 L 86.294,2.0 L 30.295,2.0 C 30.295,2.0,30.295,2.0,30.295,2.0 L 23.433,56.127 C 23.433,56.127,23.433,56.127,23.433,56.127 C 23.433,56.127,37.634,42.727,53.865,40.258 C 55.042,40.132,56.236,40.064,57.443,40.064 L 57.443,40.064 C 76.058,40.064,92.846,55.7,92.846,75.314 L 92.846,75.314 C 92.846,94.927,76.764,111.19,56.033,111.19 C 35.303,111.19,25.574,95.41,24.707,93.911 C 23.84,92.413,20.0,82.333,20.0,82.333 L 20.0,82.333 C 20.0,82.333,20.0,82.333,20.0,82.333 L 20.0,82.333 z</string>
    <string name="path_data_6_">M 65.553986,62.744 L 65.553986,62.744 C 65.553986,62.744,69.63099,61.961,70.06299,61.856 C 70.06299,61.856,70.06299,61.856,70.06299,61.856 C 70.06299,61.856,70.06299,61.856,70.06299,61.856 L 69.61498,61.92 C 74.04498,61.286,82.13099,60.034,91.82499,64.436 L 91.82499,64.436 C 106.47699,71.089,110.69898,85.554,110.164986,96.23 C 109.65799,106.389,100.14298,125.209,81.10499,129.214 C 77.39098,129.995,73.805984,130.173,70.39699,129.842 L 70.39699,129.842 C 56.788986,128.119,45.140987,118.156,40.478985,106.321 C 34.549988,91.272,43.362988,75.207,46.882984,68.504 C 50.404987,61.8,79.151985,20.424,79.151985,20.424 L 79.151985,20.424 L 79.151985,20.424 L 68.22598,8.909 L 61.670986,2.0 L 61.670986,2.0 C 61.670986,2.0,32.924988,43.376,29.403986,50.08 L 29.403986,50.08 C 25.881987,56.783,17.069986,72.848,22.997986,87.898 C 28.383986,101.569,43.160984,112.483,59.845985,111.385 C 61.088985,111.255,62.349987,111.058,63.624985,110.79 L 63.624985,110.79 C 82.66299,106.785,92.177986,87.965,92.68498,77.806 L 92.68498,77.806 C 93.21799,67.13,88.99599,52.665,74.344986,46.012 C 74.344986,46.012,74.344986,46.012,74.344986,46.012 C 61.865986,40.345,48.073986,44.32,48.073986,44.32 L 65.553986,62.744 C 65.553986,62.744,65.553986,62.744,65.553986,62.744 L 65.553986,62.744 z</string>
    <string name="cd_iv_hour_ten_digits">小时的十位</string>
    <string name="cd_iv_hour_single_digits">小时的个位</string>
    <string name="cd_iv_colon">冒号</string>
    <string name="cd_iv_minute_ten_digits">分钟的十位</string>
    <string name="cd_iv_minute_single_digits">分钟的个位</string>
    <string name="cd_iv_second_ten_digits">秒的十位</string>
    <string name="cd_iv_second_single_digits">秒的个位</string>
</resources>