<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_hour_ten_digits"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_iv_hour_ten_digits"
            android:src="@drawable/svg_1"/>

        <View
            android:id="@+id/view_divider_horizontal_0"
            android:layout_width="4dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/iv_hour_single_digits"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_iv_hour_single_digits"
            android:src="@drawable/svg_0"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/iv_colon"
            android:contentDescription="@string/cd_iv_colon"
            android:src="@drawable/svg_colon"/>

        <ImageView
            android:id="@+id/iv_min_ten_digits"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_iv_minute_ten_digits"
            android:src="@drawable/svg_0"/>

        <View
            android:id="@+id/view_divider_horizontal_1"
            android:layout_width="4dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/iv_min_single_digits"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/cd_iv_minute_single_digits"
            android:src="@drawable/svg_0"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:id="@+id/view_divider_vertical"
        android:layout_height="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_sec_ten_digits"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/cd_iv_second_ten_digits"
            android:src="@drawable/svg_0"/>

        <View
            android:id="@+id/view_divider_horizontal_2"
            android:layout_width="4dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:id="@+id/iv_sec_single_digits"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/cd_iv_second_single_digits"
            android:src="@drawable/svg_0"/>
    </LinearLayout>
</LinearLayout>